# PromptBox

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  REFACTORING.md  TESTING_CHECKLIST.md  TODO.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.json
.claude/commands/: e2e-test.md
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.serena/: project.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260418_0000_0001_baseline.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/endpoints/: auth.py  batch.py  duplicates.py  export.py  gelbooru.py  health.py  images.py  loras.py  models.py  search_presets.py  showcases.py  smart_folders.py  stats.py  tags.py
backend/app/models/: __init__.py  image.py  search_preset.py  showcase.py  smart_folder.py
backend/app/parsers/: __init__.py  a1111.py  base.py  comfyui.py  factory.py  model_detector.py  novelai.py  png_reader.py
backend/app/schemas/: __init__.py  auth.py  common.py  gelbooru.py  image.py  model.py  search_preset.py  showcase.py  smart_folder.py
backend/app/services/: auth_service.py  batch_service.py  civitai_service.py  export_service.py  gelbooru_service.py  image_service.py
backend/app/utils/: __init__.py  file_utils.py  hash_utils.py  image_utils.py
backend/app/workers/: __init__.py  watcher.py
backend/scripts/: entrypoint.sh  migrate.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/test_api/: __init__.py  test_auth.py  test_health.py
backend/tests/unit/test_parsers/: test_a1111.py  test_comfyui.py  test_factory.py  test_model_detector.py  test_novelai.py
backend/tests/unit/test_services/: test_auth_service.py
backend/tests/unit/test_utils/: test_hash_utils.py
db/init/: 01_init.sql  02_search_presets.sql  03_smart_folders.sql
db/migrations/: 002_add_showcases.sql
docs/: 01_requirements.md  02_architecture.md  03_database_schema.md  04_api_design.md  05_metadata_parser.md  06_docker_infrastructure.md  07_deployment.md  07_e2e_testing.md  08_coderabbit.md  09_ai_dlc_gap_analysis.md  09_ios_app_design.md  10_backup_strategy.md
docs/adr/: 0001-use-fastapi-async.md  0002-uuid-v7-for-ids.md  0003-metadata-parser-strategy.md  0004-image-storage-structure.md  0005-session-auth.md  README.md
frontend/: .prettierrc  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  batch.ts  client.ts  duplicates.ts  gelbooru.ts  images.ts  models.ts  searchPresets.ts  showcases.ts  smartFolders.ts  stats.ts  tags.ts
frontend/src/constants/: rating.ts
frontend/src/hooks/: useColumnCount.ts  useConfirmDialog.tsx
frontend/src/pages/: DetailPage.tsx  DuplicatesPage.tsx  GalleryPage.tsx  GelbooruTagsPage.tsx  LoginPage.tsx  LoraDetailPage.tsx  LorasPage.tsx  ModelDetailPage.tsx  ModelsPage.tsx  ShowcaseDetailPage.tsx  ShowcasesPage.tsx  SmartFoldersPage.tsx  (+3 more)
ios/: README.md
scripts/: deploy.sh  setup-e2e.sh
(+75 files in other folders)
